change the file style  ohhhhhh

--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>酱油神大学</title>
+    <title>酱油神大学-登录页</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-<p>hello world</p>
+<header>
+    <span   class="left">注册</span>
+    登录
+    <span class="right">关闭</span>
+</header>
+<br/>
+<div class="center">
+    <div class="image"><img src="images/手机.png" ></div>
+    &nbsp &nbsp<input type="text"  placeholder="请输入手机号">
+</div>
+<br/>
+<div class="center">
+    <div class="image"><img src="images/闹钟.png" ></div>
+    &nbsp &nbsp<input type="password"  placeholder="请输入密码">
+</div>
+<br/>
+<button > 登录</button>
+<div  class="right"> <a href="www.baidu.com" ><u>忘记密码</u></a></div>
 </body>
 </html>
