睡了两小时的午觉，罪恶感油然而生

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 </header>
 <br/>
 <div class="center">
-    <div class="image"><img src="images/手机.png" ></div>
-    &nbsp &nbsp<input type="text"  placeholder="请输入手机号">
+    <div class="image"><img src="images/手机.png"></div>
+    &nbsp &nbsp &nbsp<div class="bar "></div>
+    &nbsp &nbsp &nbsp<input type="text"  placeholder="请输入手机号">
 </div>
 <br/>
 <div class="center">
     <div class="image"><img src="images/闹钟.png" ></div>
-    &nbsp &nbsp<input type="password"  placeholder="请输入密码">
+    &nbsp &nbsp &nbsp<div class="bar "></div>
+    &nbsp &nbsp &nbsp<input type="password"  placeholder="请输入密码">
 </div>
 <br/>
 <button > 登录</button>
