change img's name

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 </header>
 <br/>
 <div class="center">
-    <div class="image"><img src="images/手机.png"></div>
+    <div class="image"><img src="images/phone.png"></div>
     &nbsp &nbsp &nbsp<div class="bar "></div>
     &nbsp &nbsp &nbsp<input type="text"  placeholder="请输入手机号">
 </div>
 <br/>
 <div class="center">
-    <div class="image"><img src="images/闹钟.png" ></div>
+    <div class="image"><img src="images/clock.png" ></div>
     &nbsp &nbsp &nbsp<div class="bar "></div>
     &nbsp &nbsp &nbsp<input type="password"  placeholder="请输入密码">
 </div>
