--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>酱油神大学-登录页</title>
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
